# tennis

./: .gitignore  .pre-commit-config.yaml  mixed_effects_model_summary.txt  pyproject.toml
data/: README  match_outcome_stats.csv  player_ids.csv
documentation/: plan.MD  work_done.MD
eda/: initial_exploration.ipynb  plots.ipynb
planning/: readme.MD
tennis/data_processing/: match_info.py  match_scores.py  pipeline.py  player_outcomes.py
tennis/data_processing/basic_processing/: __init__.py  match_info.py  match_scores.py  player_info.py  player_outcomes.py
tennis/data_processing/historical_features/: __init__.py  historic_featureset.py
tennis/data_processing/pipelines/: __init__.py  pipeline.py
tennis/data_processing/pydantic_models/: match_info.py  player_info.py
tennis/model_usage/: basic_markov_model.py  bayesian_markov_model.py  comparison.py  decision_tree.py  logistic_regression.py  mixed_effects_markov_model.py  player_and_opponet_markov_model.py  random_forest.py
tennis/models/: markov_model.py  simulator.py
