[tool.poetry]
name = "tennis"
version = "0.1.0"
description = ""
authors = ["Mark <markclare1992@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
mlflow = "^2.14.0"
pydantic = "^2.7.4"
fuzzywuzzy = "^0.18.0"
jupyterlab = "^4.2.2"
notebook = "^7.2.1"
ipython = "^8.25.0"
python-levenshtein = "^0.25.1"
ruff = "^0.4.9"
pre-commit = "^3.7.1"
rapidfuzz = "^3.9.3"
mypy = "^1.10.0"
pytest = "^8.2.2"
statsmodels = "^0.14.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
